Bug 1169125 - Part 1: Allow sending any DataSourceSurface-backed image over WebRTC and fix failure cases. r=bwc

--HG--
extra : rebase_source : c4a9d4fb40d1ea2aefe3be7bfa864998dc2062fa
extra : histedit_source : d7909e28671d1b965798e7e040a8fdc51309585f